# rustclaw

./: .gitignore  Cargo.toml  README.md  build.sh  example.config.toml
example/: schema.json
playground/: chromiumoxide_baidu.rs
scripts/: regression_telegram_listener.sh
skills/: adhd_product_prd.md
src/: app.rs  client.rs  config.rs  interrupt.rs  main.rs  react_agent.rs  session.rs  types.rs
src/channel/: telegram.rs
src/conversation/: mod.rs  telegram.rs  tui.rs
src/cron/: mod.rs
src/log/: mod.rs
src/memory/: markdown.rs  mod.rs
src/model/: deepseek.rs  mod.rs  openai.rs
src/skills/: markdown.rs  mod.rs
src/tools/: awareness.rs  cron.rs  exec.rs  http.rs  input.rs  manager.rs  memory.rs  mobile.rs  mod.rs  screen_capture.rs  skills.rs  time.rs  web.rs
