[package]
name = "rustclaw"
version = "0.1.0"
edition = "2024"

[features]
default = []
mobile = ["dep:evdev"]

[dependencies]
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
crossterm = "0.28"
futures-util = "0.3"
ratatui = "0.28"
reqwest = { version = "0.12", features = ["json", "stream"] }
chromiumoxide = { version = "0.9.1", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
minify-html = "0.18.1"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "fs"] }
evdev = { version = "0.12", optional = true }

[[bin]]
name = "chromiumoxide_baidu"
path = "playground/chromiumoxide_baidu.rs"
