[package]
name = "rustclaw"
version = "0.1.0"
edition = "2024"
default-run = "rustclaw"

[features]
default = ["desktop"]
desktop = []
mobile = []

[dependencies]
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
crossterm = "0.28"
futures-util = "0.3"
ratatui = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = "0.17"
toml = "0.8"
minify-html = "0.18.1"
base64 = "0.22"
evdev = "0.13.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "fs"] }

